# hwp-dvc

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/hwp-dvc-cli/: Cargo.toml
crates/hwp-dvc-cli/src/: main.rs
crates/hwp-dvc-core/: Cargo.toml
crates/hwp-dvc-core/src/: error.rs  lib.rs
crates/hwp-dvc-core/src/checker/: mod.rs
crates/hwp-dvc-core/src/checker/bullet/: mod.rs
crates/hwp-dvc-core/src/checker/char_shape/: mod.rs
crates/hwp-dvc-core/src/checker/hyperlink/: mod.rs
crates/hwp-dvc-core/src/checker/macro_/: mod.rs
crates/hwp-dvc-core/src/checker/numbering/: mod.rs
crates/hwp-dvc-core/src/checker/outline_shape/: mod.rs
crates/hwp-dvc-core/src/checker/para_num_bullet/: mod.rs
crates/hwp-dvc-core/src/checker/para_shape/: mod.rs
crates/hwp-dvc-core/src/checker/special_character/: mod.rs
crates/hwp-dvc-core/src/checker/style/: mod.rs
crates/hwp-dvc-core/src/checker/table/: detail.rs  mod.rs
crates/hwp-dvc-core/src/document/: mod.rs
crates/hwp-dvc-core/src/document/header/: mod.rs
crates/hwp-dvc-core/src/document/run_type/: builder.rs  mod.rs
crates/hwp-dvc-core/src/document/section/: mod.rs
crates/hwp-dvc-core/src/error/: messages.rs
crates/hwp-dvc-core/src/output/: mod.rs  xml.rs
crates/hwp-dvc-core/src/spec/: mod.rs
crates/hwp-dvc-core/tests/: check_bullet.rs  check_char_shape.rs  check_char_shape_extended.rs  check_hyperlink.rs  check_macro.rs  check_outline_shape.rs  check_para_num_bullet.rs  check_para_shape.rs  check_para_shape_extended.rs  check_special_character.rs  check_style.rs  check_table.rs  golden.rs  header_parsing.rs  korean_error_messages.rs  output_scope.rs  run_type_info.rs  section_parsing.rs  spec_fixtures.rs  xml_output.rs
crates/hwp-dvc-core/tests/fixtures/docs/: README.md  bullet_allowed.hwpx  bullet_disallowed.hwpx  charshape_fail_font.hwpx  charshape_fail_ratio.hwpx  charshape_pass.hwpx  hyperlink_external.hwpx  macro_none.hwpx  macro_present.hwpx  outline_multilevel.hwpx  paranum_simple.hwpx  parashape_fail_indent.hwpx  parashape_fail_linespacing.hwpx  parashape_pass.hwpx  specialchar_fail_ctrl.hwpx  specialchar_pass.hwpx  style_custom.hwpx  table_nested.hwpx  (+1 more)
crates/hwp-dvc-core/tests/golden/: README.md  runner.rs
(+31 files in other folders)
