[workspace]
resolver = "2"
members = [
    "crates/hwp-dvc-core",
    "crates/hwp-dvc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Jeongkyu Shin <jshin@lablup.com>"]
repository = "https://github.com/inureyes/hwp-dvc"
readme = "README.md"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HWPX = ZIP of XML
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.38", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
