[package]
name = "hwp-dvc-cli"
description = "Command-line interface for HWPX Document Validation Checker (DVC)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "hwp-dvc"
path = "src/main.rs"

[dependencies]
hwp-dvc-core = { path = "../hwp-dvc-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
